--- a/wiki/fr/TechDraw_Hatch.html
+++ b/wiki/fr/TechDraw_Hatch.html
@@ -25,7 +25,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Hachures &rarr; Hachurer une face en utilisant un fichier image
+<td class="ctEven">TechDraw &rarr; Hachures &rarr; Hachurer par une image
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -154,15 +154,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124105740
+Cached time: 20260124105759
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.131 seconds
 Preprocessor visited node count: 596/1000000
-Post&#8208;expand include size: 27356/2097152 bytes
-Template argument size: 10515/2097152 bytes
+Post&#8208;expand include size: 27306/2097152 bytes
+Template argument size: 10465/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -170,19 +170,19 @@ Unstrip post&#8208;expand size: 3914/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.777      1 -total
- 21.25%    8.026      1 Template:TechDraw_Tools_navi/fr
- 19.25%    7.271      2 Template:Navigation_menu_2
- 10.94%    4.132      1 Template:Userdocnavi/fr
-  9.32%    3.520      2 Template:PropertyData
-  9.28%    3.506      2 Template:Docnav/fr
-  7.45%    2.813      1 Template:GuiCommand/fr
-  6.68%    2.525      1 Template:Version/fr
-  6.68%    2.524      4 Template:Variable
-  6.57%    2.483      3 Template:Code
+100.00%   34.151      1 -total
+ 18.26%    6.236      1 Template:TechDraw_Tools_navi/fr
+ 14.39%    4.913      2 Template:Navigation_menu_2
+ 10.25%    3.501      2 Template:PropertyData
+  9.58%    3.272      1 Template:Userdocnavi/fr
+  7.57%    2.586      3 Template:Code
+  7.18%    2.452      2 Template:Docnav/fr
+  7.05%    2.408      1 Template:Version/fr
+  6.73%    2.298      4 Template:Variable
+  6.23%    2.129      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124105740 and revision id 1731970. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124105759 and revision id 1743291. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
