--- a/wiki/fr/TechDraw_Hatch.html
+++ b/wiki/fr/TechDraw_Hatch.html
@@ -62,16 +62,13 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionner une r&eacute;gion ferm&eacute;e dans une vue.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Hatch.svg&amp;filetimestamp=20240710131706&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hachurer une face en utilisant un fichier image </a></span>.</li>
-<li>S&eacute;lectionnez le <b>TechDraw &rarr; Hachures &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Hatch.svg&amp;filetimestamp=20240710131706&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hachurer une face en utilisant un fichier image </b> dans le menu.</li></ul></li>
-<li>Le panneau de t&acirc;ches <b>Appliquer des hachures &agrave; la face</b> s'ouvre.</li>
-<li>Vous pouvez modifier <b>Fichier de motif</b>.</li>
-<li>Vous pouvez &eacute;galement modifier les param&egrave;tres <b>Echelle du motif</b> et <b>Couleur de trait</b>. Ces param&egrave;tres sont ignor&eacute;s pour les motifs bitmap.</li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Hatch.svg&amp;filetimestamp=20240710131706&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hachurer par une image</a></span>.</li>
+<li>S&eacute;lectionnez le <b>TechDraw &rarr; Hachures &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Hatch.svg&amp;filetimestamp=20240710131706&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hachurer par une image</b> du menu.</li></ul></li>
+<li>Le panneau de t&acirc;ches <b>Hachurer la face</b> s'ouvre.</li>
+<li>Vous pouvez modifier <b>Fichier de motif</b>, <b>&Eacute;chelle du motif SVG</b>, <b>Couleur des lignes SVG</b>, <b>Angle de rotation</b>, <b>D&eacute;calage en X</b> et <b>D&eacute;calage en Y</b>. Les param&egrave;tres <b>SVG</b> sont ignor&eacute;s pour les motifs bitmap.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -154,15 +151,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124105759
+Cached time: 20260124110536
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.131 seconds
-Preprocessor visited node count: 596/1000000
-Post&#8208;expand include size: 27306/2097152 bytes
-Template argument size: 10465/2097152 bytes
+CPU time usage: 0.105 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 619/1000000
+Post&#8208;expand include size: 27320/2097152 bytes
+Template argument size: 10455/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -170,19 +167,19 @@ Unstrip post&#8208;expand size: 3914/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.151      1 -total
- 18.26%    6.236      1 Template:TechDraw_Tools_navi/fr
- 14.39%    4.913      2 Template:Navigation_menu_2
- 10.25%    3.501      2 Template:PropertyData
-  9.58%    3.272      1 Template:Userdocnavi/fr
-  7.57%    2.586      3 Template:Code
-  7.18%    2.452      2 Template:Docnav/fr
-  7.05%    2.408      1 Template:Version/fr
-  6.73%    2.298      4 Template:Variable
-  6.23%    2.129      1 Template:GuiCommand/fr
+100.00%   37.659      1 -total
+ 17.81%    6.708      1 Template:TechDraw_Tools_navi/fr
+ 14.74%    5.551      2 Template:Navigation_menu_2
+ 10.74%    4.046      1 Template:Userdocnavi/fr
+ 10.17%    3.830      2 Template:PropertyData
+  7.90%    2.976      2 Template:Docnav/fr
+  7.29%    2.746      1 Template:GuiCommand/fr
+  7.06%    2.658      4 Template:Variable
+  6.48%    2.440      3 Template:Code
+  5.66%    2.130      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124105759 and revision id 1743291. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124110536 and revision id 1743294. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
