--- a/wiki/fr/TechDraw_Hatch.html
+++ b/wiki/fr/TechDraw_Hatch.html
@@ -72,11 +72,9 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Pour un remplissage en couleur unie, s&eacute;lectionnez <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">solid.svg</span> comme <b>Pattern File</b>.</li>
-<li>Les objets hachur&eacute;s sont vuln&eacute;rables au "<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;me de nommage topologique</a>". Voir <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a> pour plus d'informations. Il est recommand&eacute; que le hachurage soit l'une des derni&egrave;res &eacute;tapes de votre processus de dessin.</li>
+<ul><li>Pour un remplissage en couleur unie, s&eacute;lectionnez <b>Pattern File</b> pour <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">solid.svg</span>.</li>
+<li>Les objets hachur&eacute;s sont vuln&eacute;rables au &laquo;&nbsp;<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;me de nommage topologique</a>&nbsp;&raquo;. Voir <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a> pour plus d'informations. Il est recommand&eacute; que le hachurage soit l'une des derni&egrave;res &eacute;tapes de votre processus de dessin.</li>
 <li>Des exemples de mod&egrave;les <a href="../fr/SVG.html" title="SVG/fr">SVG</a> sont disponibles localement dans</li></ul>
-</div>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="err">$</span><span class="n">INSTALL_DIR</span><span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">TechDraw</span><span class="o">/</span><span class="n">Patterns</span>
 </pre></div></dd>
 <dd>o&ugrave; <code>$INSTALL_DIR</code> est le r&eacute;pertoire o&ugrave; FreeCAD a &eacute;t&eacute; install&eacute;, par exemple&nbsp;:</dd>
@@ -151,13 +149,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124110536
+Cached time: 20260124110709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.146 seconds
-Preprocessor visited node count: 619/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 618/1000000
 Post&#8208;expand include size: 27320/2097152 bytes
 Template argument size: 10455/2097152 bytes
 Highest expansion depth: 7/100
@@ -167,19 +165,19 @@ Unstrip post&#8208;expand size: 3914/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.659      1 -total
- 17.81%    6.708      1 Template:TechDraw_Tools_navi/fr
- 14.74%    5.551      2 Template:Navigation_menu_2
- 10.74%    4.046      1 Template:Userdocnavi/fr
- 10.17%    3.830      2 Template:PropertyData
-  7.90%    2.976      2 Template:Docnav/fr
-  7.29%    2.746      1 Template:GuiCommand/fr
-  7.06%    2.658      4 Template:Variable
-  6.48%    2.440      3 Template:Code
-  5.66%    2.130      1 Template:Caption
+100.00%   40.610      1 -total
+ 19.88%    8.072      1 Template:TechDraw_Tools_navi/fr
+ 19.16%    7.782      2 Template:Navigation_menu_2
+ 18.00%    7.308      1 Template:Userdocnavi/fr
+  8.70%    3.532      2 Template:PropertyData
+  7.03%    2.853      1 Template:GuiCommand/fr
+  6.75%    2.741      2 Template:Docnav/fr
+  6.19%    2.514      4 Template:Variable
+  5.42%    2.202      1 Template:Version/fr
+  5.40%    2.192      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124110536 and revision id 1743294. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124110709 and revision id 1743296. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
