--- a/wiki/fr/TechDraw_Hatch.html
+++ b/wiki/fr/TechDraw_Hatch.html
@@ -84,10 +84,10 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Source</b>: la vue et la r&eacute;gion qui va recevoir le motif de hachures.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Hatch Pattern</b>: chemin d'acc&egrave;s complet et nom de fichier vers un fichier de motif SVG.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Hatch Color</b>: le motif de hachures sera affich&eacute; dans cette couleur.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Hatch Scale</b>: modificateur de taille de motif de hachures.</li></ul>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Source</b>&nbsp;: la vue et la r&eacute;gion qui vont recevoir le motif de hachures.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Hatch Pattern</b>&nbsp;: chemin d'acc&egrave;s complet et nom de fichier vers un fichier de motif SVG.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Hatch Color</b>&nbsp;: motif de hachures sera affich&eacute; dans cette couleur.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Hatch Scale</b>&nbsp;: modificateur de taille de motif de hachures.</li></ul>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -149,12 +149,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124110709
+Cached time: 20260124110802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.135 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.207 seconds
 Preprocessor visited node count: 618/1000000
 Post&#8208;expand include size: 27320/2097152 bytes
 Template argument size: 10455/2097152 bytes
@@ -165,19 +165,19 @@ Unstrip post&#8208;expand size: 3914/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.610      1 -total
- 19.88%    8.072      1 Template:TechDraw_Tools_navi/fr
- 19.16%    7.782      2 Template:Navigation_menu_2
- 18.00%    7.308      1 Template:Userdocnavi/fr
-  8.70%    3.532      2 Template:PropertyData
-  7.03%    2.853      1 Template:GuiCommand/fr
-  6.75%    2.741      2 Template:Docnav/fr
-  6.19%    2.514      4 Template:Variable
-  5.42%    2.202      1 Template:Version/fr
-  5.40%    2.192      3 Template:Code
+100.00%   62.740      1 -total
+ 15.70%    9.850      1 Template:TechDraw_Tools_navi/fr
+ 12.19%    7.646      2 Template:PropertyData
+ 11.11%    6.969      2 Template:Navigation_menu_2
+  8.14%    5.106      1 Template:GuiCommand/fr
+  8.14%    5.105      1 Template:Userdocnavi/fr
+  7.54%    4.731      4 Template:Variable
+  7.11%    4.461      2 Template:Docnav/fr
+  6.84%    4.291      3 Template:Code
+  6.28%    3.940      2 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124110709 and revision id 1743296. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124110801 and revision id 1743298. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
