--- a/wiki/fr/TechDraw_GeometricHatch.html
+++ b/wiki/fr/TechDraw_GeometricHatch.html
@@ -121,14 +121,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Hatch.html" title="TechDraw Hatch/fr">Hachures par motif</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Annotation.html" title="TechDraw Annotation/fr">Annotation</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_WeldSymbol.html" title="TechDraw WeldSymbol/fr">Soudage</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -168,15 +166,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124110944
+Cached time: 20260124111000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.229 seconds
-Preprocessor visited node count: 681/1000000
-Post&#8208;expand include size: 27730/2097152 bytes
-Template argument size: 10781/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.132 seconds
+Preprocessor visited node count: 680/1000000
+Post&#8208;expand include size: 27721/2097152 bytes
+Template argument size: 10775/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
@@ -184,19 +182,19 @@ Unstrip post&#8208;expand size: 5447/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.383      1 -total
- 17.50%   11.266      4 Template:PropertyData
- 14.00%    9.013      1 Template:TechDraw_Tools_navi/fr
- 13.54%    8.716      1 Template:Userdocnavi/fr
- 11.32%    7.289      1 Template:Caption
-  9.94%    6.402      2 Template:Navigation_menu_2
-  8.55%    5.507      6 Template:Variable
-  7.26%    4.673      4 Template:Code
-  7.16%    4.608      1 Template:GuiCommand/fr
-  5.55%    3.574      2 Template:Docnav/fr
+100.00%   45.053      1 -total
+ 25.62%   11.542      1 Template:Userdocnavi/fr
+ 17.85%    8.040      1 Template:TechDraw_Tools_navi/fr
+ 14.71%    6.625      2 Template:Navigation_menu_2
+  9.81%    4.421      4 Template:Code
+  9.79%    4.412      4 Template:PropertyData
+  7.33%    3.303      6 Template:Variable
+  7.27%    3.276      1 Template:GuiCommand/fr
+  4.69%    2.111      1 Template:Incode
+  4.50%    2.028      2 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124110943 and revision id 1743302. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124110959 and revision id 1743304. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
