--- a/wiki/fr/TechDraw_GeometricHatch.html
+++ b/wiki/fr/TechDraw_GeometricHatch.html
@@ -23,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Hachures &rarr; Appliquer un motif de hachure g&eacute;om&eacute;trique &agrave; une face
+<td class="ctEven">TechDraw &rarr; Hachures &rarr; Appliquer un motif de hachures g&eacute;om&eacute;triques
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -166,15 +166,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111000
+Cached time: 20260124111208
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.132 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 680/1000000
-Post&#8208;expand include size: 27721/2097152 bytes
-Template argument size: 10775/2097152 bytes
+Post&#8208;expand include size: 27701/2097152 bytes
+Template argument size: 10755/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
@@ -182,19 +182,19 @@ Unstrip post&#8208;expand size: 5447/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.053      1 -total
- 25.62%   11.542      1 Template:Userdocnavi/fr
- 17.85%    8.040      1 Template:TechDraw_Tools_navi/fr
- 14.71%    6.625      2 Template:Navigation_menu_2
-  9.81%    4.421      4 Template:Code
-  9.79%    4.412      4 Template:PropertyData
-  7.33%    3.303      6 Template:Variable
-  7.27%    3.276      1 Template:GuiCommand/fr
-  4.69%    2.111      1 Template:Incode
-  4.50%    2.028      2 Template:PropertyView
+100.00%   46.609      1 -total
+ 19.26%    8.976      1 Template:TechDraw_Tools_navi/fr
+ 15.26%    7.113      2 Template:Navigation_menu_2
+ 10.84%    5.053      4 Template:PropertyData
+  9.23%    4.300      1 Template:GuiCommand/fr
+  7.93%    3.696      4 Template:Code
+  7.93%    3.696      6 Template:Variable
+  7.60%    3.541      1 Template:Userdocnavi/fr
+  7.30%    3.402      2 Template:Docnav/fr
+  7.07%    3.297      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124110959 and revision id 1743304. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111208 and revision id 1743306. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
