Updated page TechDraw GeometricHatch/fr

--- a/wiki/fr/TechDraw_GeometricHatch.html
+++ b/wiki/fr/TechDraw_GeometricHatch.html
@@ -75,7 +75,7 @@
 <li>Un petite nombre de mod&egrave;les est disponible sur&nbsp;:</li></ul>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="err">$</span><span class="n">INSTALL_DIR</span><span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">TechDraw</span><span class="o">/</span><span class="n">PAT</span><span class="o">/</span><span class="n">FCPAT</span><span class="o">.</span><span class="n">pat</span>
 </pre></div></dd>
-<dd>O&ugrave; <code>$INSTALL_DIR</code> est le r&eacute;pertoire dans lequel FreeCAD a &eacute;t&eacute; install&eacute;, par exemple&nbsp;:</dd>
+<dd>O&ugrave; <code>$INSTALL_DIR</code> est le r&eacute;pertoire d'installation de FreeCAD, par exemple&nbsp;:</dd>
 <dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">/</span><span class="n">usr</span><span class="o">/</span><span class="n">share</span><span class="o">/</span><span class="n">freecad</span><span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">TechDraw</span><span class="o">/</span><span class="n">PAT</span><span class="o">/</span><span class="n">FCPAT</span><span class="o">.</span><span class="n">pat</span>
 </pre></div></dd></dl>
 <p><span id="Properties"></span>
@@ -161,12 +161,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111605
+Cached time: 20260124111623
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 684/1000000
 Post&#8208;expand include size: 27703/2097152 bytes
 Template argument size: 10751/2097152 bytes
@@ -177,19 +177,19 @@ Unstrip post&#8208;expand size: 5447/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.904      1 -total
- 18.60%    6.865      1 Template:TechDraw_Tools_navi/fr
- 15.49%    5.715      4 Template:PropertyData
- 15.06%    5.558      2 Template:Navigation_menu_2
- 10.38%    3.832      1 Template:Userdocnavi/fr
-  9.85%    3.634      6 Template:Variable
-  7.92%    2.922      4 Template:Code
-  7.69%    2.839      1 Template:GuiCommand/fr
-  7.41%    2.736      2 Template:Docnav/fr
-  5.95%    2.195      2 Template:PropertyView
+100.00%   43.800      1 -total
+ 18.95%    8.301      1 Template:TechDraw_Tools_navi/fr
+ 14.11%    6.178      4 Template:PropertyData
+ 13.77%    6.029      2 Template:Navigation_menu_2
+ 11.91%    5.218      1 Template:Userdocnavi/fr
+ 10.61%    4.646      6 Template:Variable
+  8.00%    3.505      1 Template:GuiCommand/fr
+  7.36%    3.222      2 Template:Docnav/fr
+  7.12%    3.118      4 Template:Code
+  6.61%    2.897      2 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111605 and revision id 1743312. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111623 and revision id 1743314. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
