Updated page TechDraw WeldSymbol/fr

--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -143,14 +143,12 @@
 <li>Il n'y a pas de norme de d&eacute;nomination particuli&egrave;re autre que celle d'ajouter "Haut/Bas" &agrave; la fl&egrave;che/autres symboles lat&eacute;raux.</li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_GeometricHatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_GeometricHatch.html" title="TechDraw GeometricHatch/fr">Hachures g&eacute;om&eacute;triques</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_SurfaceFinishSymbols.html" title="TechDraw SurfaceFinishSymbols/fr">Symbole de finition de surface</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -190,15 +188,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111828
+Cached time: 20260124111846
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.154 seconds
-Preprocessor visited node count: 822/1000000
-Post&#8208;expand include size: 28767/2097152 bytes
-Template argument size: 11450/2097152 bytes
+CPU time usage: 0.084 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 821/1000000
+Post&#8208;expand include size: 28842/2097152 bytes
+Template argument size: 11500/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -206,19 +204,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.003      1 -total
- 20.95%    8.592     12 Template:PropertyData
- 18.73%    7.681      1 Template:TechDraw_Tools_navi/fr
- 13.88%    5.691      2 Template:Navigation_menu_2
- 12.34%    5.061     12 Template:Variable
- 11.53%    4.728      1 Template:Userdocnavi/fr
-  8.97%    3.680      1 Template:GuiCommand/fr
-  8.93%    3.660      1 Template:Code
-  7.41%    3.040      2 Template:Docnav/fr
-  6.95%    2.850      1 Template:Caption
+100.00%   31.362      1 -total
+ 19.77%    6.202     12 Template:PropertyData
+ 19.36%    6.070      1 Template:TechDraw_Tools_navi/fr
+ 13.91%    4.361      2 Template:Navigation_menu_2
+ 13.66%    4.284      1 Template:Userdocnavi/fr
+ 12.00%    3.762     12 Template:Variable
+  9.40%    2.947      1 Template:GuiCommand/fr
+  9.00%    2.822      1 Template:Code
+  7.84%    2.458      1 Template:Caption
+  7.05%    2.212      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124111828 and revision id 1743324. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124111845 and revision id 1743326. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
