Updated page TechDraw HoleShaftFit/fr

--- a/wiki/fr/TechDraw_HoleShaftFit.html
+++ b/wiki/fr/TechDraw_HoleShaftFit.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw HoleShaftFit/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+HoleShaftFit&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Passungen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_HoleShaftFit.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw HoleShaftFit (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Accoppiamento foro/albero (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj pasowanie otworu / wa&#322;u (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#44396;&#47693;&#52629; &#45180;&#50892;&#47582;&#52644; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -74,14 +74,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_SurfaceFinishSymbol.html" class="mw-redirect" title="TechDraw SurfaceFinishSymbol/fr">Symbole de finition de surface</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackTop.html" title="TechDraw StackTop/fr">Empiler en haut</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -121,34 +119,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124114837
+Cached time: 20260124114853
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.148 seconds
-Preprocessor visited node count: 360/1000000
-Post&#8208;expand include size: 26182/2097152 bytes
-Template argument size: 10254/2097152 bytes
+CPU time usage: 0.094 seconds
+Real time usage: 0.151 seconds
+Preprocessor visited node count: 359/1000000
+Post&#8208;expand include size: 26044/2097152 bytes
+Template argument size: 10162/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1427/5000000 bytes
+Unstrip post&#8208;expand size: 1428/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.018      1 -total
- 28.20%    9.594      1 Template:TechDraw_Tools_navi/fr
- 19.63%    6.679      2 Template:Navigation_menu_2
- 17.19%    5.846      1 Template:Userdocnavi/fr
- 13.38%    4.551      1 Template:GuiCommand/fr
- 10.27%    3.495      1 Template:Caption
-  9.97%    3.393      3 Template:MenuCommand
-  9.89%    3.366      2 Template:Docnav/fr
-  7.90%    2.686      2 Template:Button
+100.00%   37.179      1 -total
+ 29.36%   10.917      1 Template:TechDraw_Tools_navi/fr
+ 24.08%    8.953      2 Template:Navigation_menu_2
+ 20.20%    7.512      1 Template:Userdocnavi/fr
+ 12.78%    4.753      1 Template:GuiCommand/fr
+ 11.86%    4.410      1 Template:Caption
+  8.00%    2.974      2 Template:Docnav/fr
+  7.73%    2.875      2 Template:Button
+  7.20%    2.676      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124114837 and revision id 1743352. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124114853 and revision id 1743354. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
