Updated page TechDraw HoleShaftFit/fr

--- a/wiki/fr/TechDraw_HoleShaftFit.html
+++ b/wiki/fr/TechDraw_HoleShaftFit.html
@@ -12,7 +12,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Symboles &rarr; Ajouter une tol&eacute;rance &agrave; un trou ou &agrave; un arbre
+<td class="ctEven">TechDraw &rarr; Symboles &rarr; Tol&eacute;rance de trou/d'arbre
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Tol&eacute;rance de trou/d'arbre</b> ajoute des tol&eacute;rances de trou ou d'arbre selon la norme ISO 286 &agrave; une cote lin&eacute;aire ou &agrave; une cote de diam&egrave;tre.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFitExample.png&amp;filetimestamp=20230214074305&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFitExample.png" decoding="async" width="500" height="235" class="mw-file-element" data-file-width="772" data-file-height="363"></a></span>
@@ -119,15 +117,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124114853
+Cached time: 20260124114949
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.151 seconds
-Preprocessor visited node count: 359/1000000
-Post&#8208;expand include size: 26044/2097152 bytes
-Template argument size: 10162/2097152 bytes
+CPU time usage: 0.072 seconds
+Real time usage: 0.103 seconds
+Preprocessor visited node count: 358/1000000
+Post&#8208;expand include size: 26000/2097152 bytes
+Template argument size: 10118/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -135,18 +133,18 @@ Unstrip post&#8208;expand size: 1428/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.179      1 -total
- 29.36%   10.917      1 Template:TechDraw_Tools_navi/fr
- 24.08%    8.953      2 Template:Navigation_menu_2
- 20.20%    7.512      1 Template:Userdocnavi/fr
- 12.78%    4.753      1 Template:GuiCommand/fr
- 11.86%    4.410      1 Template:Caption
-  8.00%    2.974      2 Template:Docnav/fr
-  7.73%    2.875      2 Template:Button
-  7.20%    2.676      3 Template:MenuCommand
+100.00%   19.379      1 -total
+ 29.16%    5.650      1 Template:TechDraw_Tools_navi/fr
+ 22.77%    4.413      2 Template:Navigation_menu_2
+ 21.88%    4.241      1 Template:Userdocnavi/fr
+ 15.40%    2.984      2 Template:Docnav/fr
+ 11.24%    2.179      1 Template:GuiCommand/fr
+  7.90%    1.531      1 Template:Caption
+  5.60%    1.086      2 Template:Button
+  5.28%    1.023      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124114853 and revision id 1743354. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124114949 and revision id 1743356. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
