Updated page TechDraw HoleShaftFit/fr

--- a/wiki/fr/TechDraw_HoleShaftFit.html
+++ b/wiki/fr/TechDraw_HoleShaftFit.html
@@ -65,7 +65,7 @@
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFit.svg&amp;filetimestamp=20241127175338&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tol&eacute;rance de trou/d'arbre</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Sp&eacute;cifiez <b>Tol&eacute;rance d'arbre</b> ou <b>Tol&eacute;rance de trou</b> selon le cas.</li>
-<li>S&eacute;lectionnez l'option de tol&eacute;rance ISO 286 souhait&eacute;e dans la liste d&eacute;roulante. Le champ correspondant et le type de tol&eacute;rance (large, adapt&eacute;, serr&eacute;) sont mis &agrave; jour.</li>
+<li>S&eacute;lectionnez l'option de tol&eacute;rance ISO 286 souhait&eacute;e dans la liste d&eacute;roulante. Le champ correspondant et le type d'ajustement (l&acirc;che, adapt&eacute;, serr&eacute;) sont mis &agrave; jour.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>L'option s&eacute;lectionn&eacute;e et les valeurs de tol&eacute;rance calcul&eacute;es sont ajout&eacute;es &agrave; la cote.</li></ol>
 <p><br>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124115430
+Cached time: 20260124120236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.134 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.102 seconds
 Preprocessor visited node count: 357/1000000
 Post&#8208;expand include size: 25956/2097152 bytes
 Template argument size: 10074/2097152 bytes
@@ -131,18 +131,18 @@ Unstrip post&#8208;expand size: 1432/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.122      1 -total
- 22.71%    6.841      1 Template:TechDraw_Tools_navi/fr
- 19.97%    6.015      2 Template:Docnav/fr
- 17.52%    5.277      1 Template:Userdocnavi/fr
- 15.17%    4.568      2 Template:Navigation_menu_2
- 13.30%    4.005      1 Template:GuiCommand/fr
- 10.73%    3.233      3 Template:MenuCommand
-  7.05%    2.123      2 Template:Button
-  6.20%    1.866      1 Template:Caption
+100.00%   21.197      1 -total
+ 38.94%    8.254      1 Template:TechDraw_Tools_navi/fr
+ 31.28%    6.630      2 Template:Navigation_menu_2
+ 19.04%    4.037      1 Template:Userdocnavi/fr
+ 11.39%    2.414      1 Template:GuiCommand/fr
+ 11.24%    2.383      2 Template:Docnav/fr
+  6.28%    1.331      1 Template:Caption
+  4.89%    1.037      3 Template:MenuCommand
+  4.85%    1.027      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124115430 and revision id 1743358. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124120236 and revision id 1743360. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
