--- a/wiki/fr/TechDraw_StackBottom.html
+++ b/wiki/fr/TechDraw_StackBottom.html
@@ -21,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Empilement &rarr; Bas de la pile
+<td class="ctEven">TechDraw &rarr; Empilement &rarr; D&eacute;placer en bas
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -100,15 +100,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124124037
+Cached time: 20260124124751
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.091 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 322/1000000
-Post&#8208;expand include size: 24139/2097152 bytes
-Template argument size: 9694/2097152 bytes
+Post&#8208;expand include size: 24143/2097152 bytes
+Template argument size: 9698/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -116,15 +116,15 @@ Unstrip post&#8208;expand size: 1235/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.200      1 -total
- 45.68%    8.313      1 Template:TechDraw_Tools_navi/fr
- 32.86%    5.981      2 Template:Navigation_menu_2
- 19.25%    3.504      1 Template:Userdocnavi/fr
- 18.68%    3.399      2 Template:Docnav/fr
- 13.95%    2.539      1 Template:GuiCommand/fr
+100.00%   24.530      1 -total
+ 47.85%   11.738      1 Template:TechDraw_Tools_navi/fr
+ 35.52%    8.712      2 Template:Navigation_menu_2
+ 18.32%    4.493      1 Template:Userdocnavi/fr
+ 16.90%    4.145      1 Template:GuiCommand/fr
+ 15.09%    3.701      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:296983-0!canonical and timestamp 20260124124037 and revision id 1743371. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:296983-0!canonical and timestamp 20260124124751 and revision id 1743379. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
